# epassctl

./: CMakeLists.txt  README.md
src/: cmd.h  cmd_app.c  cmd_mediaplayer.c  cmd_overlay.c  cmd_prts.c  cmd_settings.c  cmd_ui.c  cmd_uix.c  icons.h  ipc_client.c  ipc_client.h  ipc_common.c  ipc_common.h  log.c  log.h  main.c  uuid.c  uuid.h
